# ChangeLog for app-accessibility/festival
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-accessibility/festival/ChangeLog,v 1.71 2008/02/06 08:42:10 opfer Exp $

  06 Feb 2008; Christian Faulhammer <opfer@gentoo.org>
  festival-1.96_beta.ebuild:
  stable x86 amd64, bug 209081

  12 Jan 2008; William Hubbs <williamh@gentoo.org>
  +files/festival-1.96_beta-gcc43.patch, festival-1.96_beta.ebuild:
  Fixed dependencies for bug #199886.
  Applied a gcc 4.3 patch for bug #205401 -- thanks to dirtyepic@gentoo.org.

  29 Aug 2007; William Hubbs <williamh@gentoo.org>
  +files/festival-1.96_beta-init-scm.patch:
  Fixed patch bug #190619.

*festival-1.96_beta (28 Aug 2007)

  28 Aug 2007; William Hubbs <williamh@gentoo.org>
  +festival-1.96_beta.ebuild:
  Version bump #188821.
  Also, I have been able to re-enstate the dependency on speech-tools.

  06 Jul 2007; Roy Marples <uberlord@gentoo.org>
  +files/festival-1.95_beta-fbsd.patch, festival-1.95_beta-r4.ebuild:
  Add patch to build on fbsd, #183686 thanks to Nathan Smith.
  Keyworded ~x86-fbsd.

  11 Jun 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  festival-1.95_beta-r4.ebuild:
  Stable on sparc wrt security #170477

  10 Jun 2007; Raúl Porcel <armin76@gentoo.org>
  festival-1.95_beta-r4.ebuild:
  x86 stable wrt security #170477

  09 Jun 2007; Wulf C. Krueger <philantrop@gentoo.org>
  festival-1.95_beta-r4.ebuild:
  Marked stable on amd64 as per bug 170477.

  09 Jun 2007; Jose Luis Rivero <yoswink@gentoo.org>
  festival-1.95_beta-r4.ebuild:
  Stable on alpha wrt security bug #170477. Thanks to Brian Evans (grknight)
  for testing.

  09 Jun 2007; Markus Rothe <corsair@gentoo.org>
  festival-1.95_beta-r4.ebuild:
  Stable on ppc64; bug #170477

  09 Jun 2007; Jeroen Roovers <jer@gentoo.org> festival-1.95_beta-r4.ebuild:
  Stable for HPPA (bug #170477).

  09 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  festival-1.95_beta-r4.ebuild: