@@ -1,6 +1,6 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-accessibility/speech-tools/speech-tools-1.2.96_beta.ebuild,v 1.6 2008/02/06 08:40:49 opfer Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-accessibility/speech-tools/speech-tools-1.2.96_beta.ebuild,v 1.7 2008/02/07 01:33:19 ranger Exp $
 
 inherit eutils toolchain-funcs
 
@@ -12,7 +12,7 @@ HOMEPAGE="http://www.cstr.ed.ac.uk/"
 SRC_URI="http://www.festvox.org/packed/festival/latest/${MY_P}.tar.gz"
 LICENSE="FESTIVAL BSD as-is"
 SLOT="0"
-KEYWORDS="~alpha amd64 ~hppa ~ia64 ~mips ~ppc ~ppc64 ~sparc x86"
+KEYWORDS="~alpha amd64 ~hppa ~ia64 ~mips ~ppc ppc64 ~sparc x86"
 IUSE="esd nas X"
 
 DEPEND="esd? ( media-sound/esound )
