@@ -1,6 +1,10 @@
 # ChangeLog for app-accessibility/speech-tools
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-accessibility/speech-tools/ChangeLog,v 1.53 2008/02/06 08:40:49 opfer Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-accessibility/speech-tools/ChangeLog,v 1.54 2008/02/07 01:33:19 ranger Exp $
+
+  07 Feb 2008; Brent Baude <ranger@gentoo.org>
+  speech-tools-1.2.96_beta.ebuild:
+  stable ppc64, bug 209081
 
   06 Feb 2008; Christian Faulhammer <opfer@gentoo.org>
   speech-tools-1.2.96_beta.ebuild:
